# pypack_rasberrysoup

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_ko.md  Dockerfile  README.md  README_ko.md  demo_run.py
.github/workflows/: publish-ghcr.yml
Rasberrysoup-src/: CMakeLists.txt
Rasberrysoup-src/include/Rasberrysoup/: Rasberrysoup.hpp
ports/rasberrysoup/: README.md  portfile.cmake  vcpkg.json
versions/: baseline.json
versions/r-/: rasberrysoup.json
